--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
 <p>Valamint a 12. legmelegebb tavasz</p>
 <hr>
 <h2 class="cimek">Csapadék</h2>
-
+<table>
+    <tr>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+    </tr>
+</table>
 <p>Havi csapadékösszegek 2017-ben és az 1981-2010-es átlagértékek (mm)</p>
 
 <p>Március</p>
@@ -46,6 +53,14 @@
 <p>Forrás: www.met.hu</p>
 <hr>
 <h2 class="cimek">Hőingás kiszámítása</h2>
+<table>
+    <tr>
+        <td></td>
+    </tr>
+    <tr>
+        <td></td>
+    </tr>
+</table>
 <p>A mai legalacsonyabb hőmérésklet:</p>
 <p>A mai legmagasabb hőmérésklet: </p>
 
