--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 <h2 class="cimek">Hőmérséklet</h2>
 <table>
     <tr>
-        <td></td>
+        <td><img src="graikon1.gif" alt="grafikon1" title="Forrás: www.met.hu"></td>
     </tr>
     <tr>
-        <td></td>
+        <td>Az országos havi középhőmérséklet eltérése a sokévi (1981-2010-es) átlagtól 2017-ben</td>
     </tr>
 </table>
-<p>Az országos havi középhőmérséklet eltérése a sokévi (1981-2010-es) átlagtól 2017-ben</p>
+
 
 <p>Januári középhőmérséklet (-4,8 °C) jelentősen elmaradt az 1981-2010-es sokévi átlagtól</p>
 <p>Ezt követően április és szeptember kivételével mindegyik hónap melegebb volt a megszokottnál.</p>
@@ -38,13 +38,12 @@
 <h2 class="cimek">Csapadék</h2>
 <table>
     <tr>
-        <td></td>
+        <td><img src="graikon2.gif" alt="grafikon2" title="Forrás: www.met.hu"></td>
     </tr>
     <tr>
-        <td></td>
+        <td>Havi csapadékösszegek 2017-ben és az 1981-2010-es átlagértékek (mm)</td>
     </tr>
 </table>
-<p>Havi csapadékösszegek 2017-ben és az 1981-2010-es átlagértékek (mm)</p>
 
 <p>Március</p>
 <p>2017 márciusa a szokásosnál szárazabb volt, az országos átlag 22,2 mm, ami az 1981-2010-es sokévi átlag csupán 64 %-a. A csapadék leginkább a középső országrészre koncentrálódott, 40-50 mm feletti értékeket eredményezve. Gerecse-tetőn regisztráltuk a legnagyobb havi összeget, 64 mm-rel. Az ország északkeleti és nyugati részein jelentkezett a legkisebb csapadékösszeg, az Őrség egyes részein 5 mm alatti értéket mértünk.</p>
