--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <td><img src="graikon1.gif" alt="grafikon1" title="Forrás: www.met.hu"></td>
     </tr>
     <tr>
-        <td>Az országos havi középhőmérséklet eltérése a sokévi (1981-2010-es) átlagtól 2017-ben</td>
+        <td class="szurke">Az országos havi középhőmérséklet eltérése a sokévi (1981-2010-es) átlagtól 2017-ben</td>
     </tr>
 </table>
 
@@ -41,7 +41,7 @@
         <td><img src="graikon2.gif" alt="grafikon2" title="Forrás: www.met.hu"></td>
     </tr>
     <tr>
-        <td>Havi csapadékösszegek 2017-ben és az 1981-2010-es átlagértékek (mm)</td>
+        <td class="szurke">Havi csapadékösszegek 2017-ben és az 1981-2010-es átlagértékek (mm)</td>
     </tr>
 </table>
 
