--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
     </tr>
 </table>
 
-
-<p>Januári középhőmérséklet (-4,8 °C) jelentősen elmaradt az 1981-2010-es sokévi átlagtól</p>
-<p>Ezt követően április és szeptember kivételével mindegyik hónap melegebb volt a megszokottnál.</p>
-<p>Márciusban a havi átlag 3,6 °C kal magasabbnak adódott a normálnál.</p>
-<p>Június +2,5 °C</p>
-<p>Augusztus +2,2 °C</p>
-<p>December +2,2 °C</p>
-<p>2017-hez köthető az 5. legmelegebb nyár</p>
-<p>Valamint a 12. legmelegebb tavasz</p>
+<ul>
+<li>Januári középhőmérséklet (-4,8 °C) jelentősen elmaradt az 1981-2010-es sokévi átlagtól</li>
+<li>Ezt követően április és szeptember kivételével mindegyik hónap melegebb volt a megszokottnál.</li>
+<li>Márciusban a havi átlag 3,6 °C kal magasabbnak adódott a normálnál.</li>
+<li>Június +2,5 °C</li>
+<li>Augusztus +2,2 °C</li>
+<li>December +2,2 °C</li>
+<li>2017-hez köthető az 5. legmelegebb nyár</li>
+<li>Valamint a 12. legmelegebb tavasz</li>
+</ul>
 <hr>
 <h2 class="cimek">Csapadék</h2>
 <table>
