--- a/index.html
+++ b/index.html
@@ -55,18 +55,15 @@
 <p><a href="https://www.met.hu" target="_blank" class="szurke">Forrás: www.met.hu</a></p>
 <hr>
 <h2 class="cimek">Hőingás kiszámítása</h2>
-<table>
-    <tr>
-        <td></td>
-    </tr>
-    <tr>
-        <td></td>
-    </tr>
-</table>
-<p>A mai legalacsonyabb hőmérésklet:</p>
-<p>A mai legmagasabb hőmérésklet: </p>
 
-<https://met.hu/eghajlat/magyarorszag_eghajlata/eghajlati_visszatekinto/elmult_evek_idojarasa/>
+<form>
+    <label>A mai legalacsonyabb hőmérésklet:</label>
+    <input type="text" name="input1"><br>
+    <label>A mai legmagasabb hőmérésklet: </label>
+    <input type="text" name="input2"><br>
+    <input type="button" value="Számolj!" id="button">
+</form>
+
 
     </div>
 </body>
